resolved switching from light to dark mode issue

--- a/frontend/src/assets/components/body/index.css
+++ b/frontend/src/assets/components/body/index.css
@@ -17,16 +17,18 @@
 }
 
 .messages-container {
-  width: 90%;
+  width: 100%;
   flex: 1;
   overflow-y: auto;
   padding: 10px;
+  /* padding-right: 20%; */
   gap: 10px;
   background-color: white;
   display: flex;
   flex-direction: column;
   min-width: 0;
   max-width: 100%;
+  box-sizing: border-box;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
@@ -152,14 +154,12 @@
   border-radius: 15px 15px 3px 15px;
   align-self: flex-end;
   word-wrap: break-word;
-  /* border: 1px solid white; */
-  /* box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2), 4px 4px 6px rgba(0, 0, 0, 0.15); */
-  /* font-family: Inter, sans-serif; */
   overflow-wrap: break-word;
   line-height: 1.2;
   animation: slideInFromRight 0.5s ease-out;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out,
     box-shadow 0.3s ease-in-out;
+  margin-right: calc(10rem + 3%);
 }
 
 
@@ -390,18 +390,20 @@ body.dark-mode {
 }
 
 .expanded .messages-container {
-  border-radius: 15px 15px 0px 0px;
+  /* border-radius: 15px 15px 0px 0px; */
   padding: 25px;
+  padding-right: 1%;
 }
 .expanded .client-message-container {
   margin: 1% 2% 1% 1%;
   max-width: 55%;
   padding: 10px;
   line-height: 1.4;
+  margin-right: calc(10rem + 2%);
 }
 .expanded .bot-message-container {
   margin: 1% 1% 1% 7%;
-  max-width: 85%;
+  max-width: 80%;
   padding: 10px;
   line-height: 1.4;
 }
@@ -466,6 +468,7 @@ body.dark-mode {
   }
   .messages-container {
     padding: 8px;
+    padding-right: 5rem;
   }
 
   .bot-message-container,
@@ -474,6 +477,10 @@ body.dark-mode {
     margin: 1% 1% 1% 1%;
     padding: 8px;
     line-height: 1.2;
+  }
+
+  .client-message-container {
+    margin-right: calc(5rem + 3%);
   }
 
   .expanded .bot-message-container {
@@ -487,6 +494,7 @@ body.dark-mode {
     padding: 15px;
     max-width: 65%;
     line-height: 1.4;
+    margin-right: calc(5rem + 2%);
   }
 }
 
@@ -525,6 +533,7 @@ body.dark-mode {
   .client-message-container {
     max-width: 72%;
     margin: 1% 4% 1% 1%;
+    margin-right: calc(2rem + 4%);
     padding: 10px;
     font-size: 14px;
     line-height: 1.4;
